feat: adiciona valições dos dados enviados nos formulários de autenticação

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,14 @@
 <resources>
     <string name="app_name">Listas Colaborativas</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_generic">Ocorreu um erro inesperado, consulte o suporte.</string>
+
+    <!--    Erros Firebase Authentication-->
+    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
+    <string name="incorrect_email_or_password_register_fragment">E-mail ou senha incorretos.</string>
+    <string name="invalid_email_or_password_register_fragment">E-mail ou senha inválidos.</string>
+    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
+    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
+    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
+    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
 </resources>
